Added a password reset feature including a reset limiter for a user.

--- a/SchulCloud.Server/Components/Pages/Account/Security.razor
+++ b/SchulCloud.Server/Components/Pages/Account/Security.razor
@@ -52,6 +52,7 @@
                                 </p>
 
                                 <Button Color="ButtonColor.Primary" @onclick="PasswordChange_ClickAsync">@Localizer["methodPassword_Change"]</Button>
+                                <Button Class="ms-2" Color="ButtonColor.Danger" @onclick="PasswordReset_Click">@Localizer["methodPassword_Reset"]</Button>
                             </Content>
                         </AccordionItem>
                     </Accordion>
