Updated NuGet packages of every project. Added a generator package that generates hard-coded routes. Used the added package in the project. Fixed the name of the ../Pages/Index.zazor.cs file.

--- a/SchulCloud.Server/Components/_Imports.razor
+++ b/SchulCloud.Server/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using SchulCloud.Server
+@using Routes = SchulCloud.Server.Routes
 @using SchulCloud.Client
 @using SchulCloud.Server.Components
 @using SchulCloud.Server.Components.Bootstrap.Forms
