--- a/SchulCloud.Server/Components/Layouts/AnonLayout.razor
+++ b/SchulCloud.Server/Components/Layouts/AnonLayout.razor
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">@PresentationOptionsAccessor.Value.ApplicationName</a>
+        <a class="navbar-brand" href="@Routes.PagesIndex()">@PresentationOptionsAccessor.Value.ApplicationName</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,7 +13,7 @@
             <div class="w-100 d-flex justify-content-between">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <NavLink class="d-flex nav-link mx-2" href="/auth/signIn">
+                        <NavLink class="d-flex nav-link mx-2" href="@Routes.SignIn(NavigationManager.ToBaseRelativePath(NavigationManager.Uri))">
                             <FontsIcon Name="login" />
                             <span class="ms-2">@Localizer["signInBtn"]</span>
                         </NavLink>
