--- a/SchulCloud.Server/Components/Layouts/MainLayout.razor
+++ b/SchulCloud.Server/Components/Layouts/MainLayout.razor
@@ -3,12 +3,12 @@
 <div class="container-fluid h-100">
     <div class="row flex-nowrap h-100">
         <div class="col-auto d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary h-100" style="min-width: 230px">
-            <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="/">@PresentationOptions.Value.ApplicationName</a>
+            <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" href="@Routes.PagesIndex()">@PresentationOptions.Value.ApplicationName</a>
             <hr />
 
             <ul class="nav nav-pills flex-column mb-auto">
                 <li>
-                    <NavLink class="d-flex align-items-center nav-link" href="/" Match="NavLinkMatch.All">
+                    <NavLink class="d-flex align-items-center nav-link" href="@Routes.PagesIndex()" Match="NavLinkMatch.All">
                         <FontsIcon Name="dashboard" />
                         <span class="ms-2">@Localizer["menuDashboard"]</span>
                     </NavLink>
@@ -23,23 +23,23 @@
                 </DropdownToggleButton>
 
                 <DropdownMenu>
-                    <DropdownItem Type="DropdownItemType.Link" To="/account" Active="@IsActive("/account")" Class="d-flex align-items-center">
+                    <DropdownItem Type="DropdownItemType.Link" To="@Routes.AccountIndex()" Active="@IsActive(Routes.AccountIndex())" Class="d-flex align-items-center">
                         <FontsIcon Name="person" />
                         <span class="ms-2">@Localizer["account"]</span>
                     </DropdownItem>
 
-                    <DropdownItem Type="DropdownItemType.Link" To="/account/security" Active="@IsActive("/account/security")" Class="d-flex align-items-center">
+                    <DropdownItem Type="DropdownItemType.Link" To="@Routes.Security()" Active="@IsActive(Routes.Security())" Class="d-flex align-items-center">
                         <FontsIcon Name="security" />
                         <span class="ms-2">@Localizer["accountSecurity"]</span>
                     </DropdownItem>
 
-                    <DropdownItem Type="DropdownItemType.Link" To="/account/settings" Active="@IsActive("/account/settings")" Class="d-flex align-items-center">
+                    <DropdownItem Type="DropdownItemType.Link" To="@Routes.Settings()" Active="@IsActive(Routes.Settings())" Class="d-flex align-items-center">
                         <FontsIcon Name="settings" />
                         <span class="ms-2">@Localizer["accountSettings"]</span>
                     </DropdownItem>
 
                     <DropdownDivider />
-                    <DropdownItem Type="DropdownItemType.Link" To="/auth/signOut" Class="d-flex align-items-center">
+                    <DropdownItem Type="DropdownItemType.Link" To="@Routes.SignOut()" Class="d-flex align-items-center">
                         <FontsIcon Name="logout" />
                         <span class="ms-2">@Localizer["accountSignOut"]</span>
                      </DropdownItem>
