-Feature: Turned the password change modal into its own page. -Fix: Renamed the placeholder json property of the default user's username (DbInitializer config).

--- a/SchulCloud.Server/Components/Layouts/MainLayout.razor
+++ b/SchulCloud.Server/Components/Layouts/MainLayout.razor
@@ -28,7 +28,7 @@
                         <span class="ms-2">@Localizer["account"]</span>
                     </DropdownItem>
 
-                    <DropdownItem Type="DropdownItemType.Link" To="@Routes.Security()" Active="@IsActive(Routes.Security())" Class="d-flex align-items-center">
+                    <DropdownItem Type="DropdownItemType.Link" To="@Routes.SecurityIndex()" Active="@IsActive(Routes.SecurityIndex())" Class="d-flex align-items-center">
                         <FontsIcon Name="security" />
                         <span class="ms-2">@Localizer["accountSecurity"]</span>
                     </DropdownItem>
