-Fix: Added a reload to the sign in page if the xsrf token isn't available ( #2 ). -Fix: Prevent endless extension of returnUrl parameter on sign in page.

--- a/SchulCloud.Server/Components/Layouts/AnonLayout.razor
+++ b/SchulCloud.Server/Components/Layouts/AnonLayout.razor
@@ -13,7 +13,7 @@
             <div class="w-100 d-flex justify-content-between">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <NavLink class="d-flex nav-link mx-2" href="@Routes.SignIn(NavigationManager.ToBaseRelativePath(NavigationManager.Uri))">
+                        <NavLink class="d-flex nav-link mx-2" href="@Routes.SignIn()">
                             <FontsIcon Name="login" />
                             <span class="ms-2">@Localizer["signInBtn"]</span>
                         </NavLink>
