-Feature: Used TS instead of JS for the complete client-side logic and created a new project for the TS code with rollup as bundler/minifier. -Improved: Added JSRuntime extensions for color theme interops. -Fix: Fixed that the displayed theme goes always back to Auto when force reloading the page. -Fix: Replaced the .slnx file (preview feature) with a normal .sln file because the .slnx isn't compatible with the TS project.

--- a/SchulCloud.Web/SchulCloud.Web/Components/App.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/App.razor
@@ -15,7 +15,15 @@
     <link rel="stylesheet" href="/static/_content/Blazor.Bootstrap/Blazor.Bootstrap.bundle.scp.css" />
 
     <HeadOutlet @rendermode="InteractiveServer" />
-    <script src="/static/js/bundle.min.js"></script>
+
+    @{
+        string scriptName = "schulcloud.web";
+        if (!Environment.IsDevelopment())
+        {
+            scriptName += ".min";
+        }
+    }
+    <script src="/static/dist/@(scriptName).js"></script>
 </head>
 
 <body class="h-100">
