--- a/SchulCloud.Web/SchulCloud.Web/Components/_Imports.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/_Imports.razor
@@ -6,7 +6,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using SchulCloud.Server
+@using SchulCloud.Web;
 @using Routes = SchulCloud.Web.Routes
 @using SchulCloud.Web.Client
 @using SchulCloud.Web.Components
