--- a/SchulCloud.Web/SchulCloud.Web/Components/App.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/App.razor
@@ -11,19 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-    <link rel="stylesheet" href="/static/css/SchulCloud.Web.bundle.scp.css" />
-    <link rel="stylesheet" href="/static/_content/Blazor.Bootstrap/Blazor.Bootstrap.bundle.scp.css" />
+    <link rel="stylesheet" href="/_static/css/SchulCloud.Web.bundle.scp.css" />
+    <link rel="stylesheet" href="/_static/_content/Blazor.Bootstrap/Blazor.Bootstrap.bundle.scp.css" />
 
     <HeadOutlet @rendermode="InteractiveServer" />
-
-    @{
-        string scriptName = "schulcloud.web";
-        if (!Environment.IsDevelopment())
-        {
-            scriptName += ".min";
-        }
-    }
-    <script src="/static/dist/@(scriptName).js"></script>
+    <script src="/_static/dist/schulcloud.web.min.js"></script>
 </head>
 
 <body class="h-100">
@@ -32,7 +24,7 @@
 
     <script src="/_framework/blazor.web.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/static/_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
+    <script src="/_static/_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
     <SectionOutlet SectionName="Scripts" @rendermode="InteractiveServer" />
 </body>
 
