-Improvement: Used FluentValidation and Blazored.FluentValidation for optiosn and model validation. -Chore: Removed App.razor.cs and LocalizationOptions.cs that are unused since previous commits.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
@@ -1,20 +1,25 @@
-﻿<SchulCloudPageTitle Title="@Localizer["title"]" />
+﻿@using Blazored.FluentValidation
+
+<SchulCloudPageTitle Title="@Localizer["title"]" />
 
 <div class="mx-4 mt-4">
-    <EditForm EditContext="_editContext">
+    <EditForm Model="_model" OnValidSubmit="OnValidSubmitAsync">
         <BsFieldCssProvider />
 
-        <EditFormValidator For="() => Model.CurrentPassword" ValidateAsync="ValidateCurrentPasswordAsync" />
-        <FloatingPasswordInput Class="mb-3" @bind-Value="Model.CurrentPassword" FloatingLabel="@Localizer["currentPassword_Placeholder"]" Placeholder="password" autocomplete="current-password" required />
+        <FluentValidationValidator />
+        <EditFormValidator For="() => _model.CurrentPassword" ValidateAsync="ValidateCurrentPasswordAsync" />
 
-        <EditFormValidator For="() => Model.NewPassword" ValidateAsync="ValidateNewPasswordAsync" />
-        <FloatingPasswordInput Class="mb-3" @bind-Value="Model.NewPassword" FloatingLabel="@Localizer["newPassword_Placeholder"]" Placeholder="newPassword" autocomplete="new-password" required />
+        <FloatingPasswordInput Class="mb-3" @bind-Value="_model.CurrentPassword" FloatingLabel="@Localizer["currentPassword_Placeholder"]"
+                               Placeholder="password" autocomplete="current-password" required />
 
-        <EditFormValidator For="() => Model.ConfirmedPassword" ValidateAsync="ValidateConfirmedPasswordAsync" />
-        <FloatingPasswordInput @bind-Value="Model.ConfirmedPassword" FloatingLabel="@Localizer["confirmedPassword_Placeholder"]" Placeholder="newPassword" autocomplete="new-password" required />
+        <FloatingPasswordInput Class="mb-3" @bind-Value="_model.NewPassword" FloatingLabel="@Localizer["newPassword_Placeholder"]"
+                               Placeholder="newPassword" autocomplete="new-password" required />
+
+        <FloatingPasswordInput @bind-Value="_model.ConfirmedPassword" FloatingLabel="@Localizer["confirmedPassword_Placeholder"]"
+                               Placeholder="newPassword" autocomplete="new-password" required />
 
         <div class="d-flex flex-column mt-3">
-            <Button Color="ButtonColor.Primary" Type="ButtonType.Submit" @onclick="ChangePassword_ClickAsync">@Localizer["submit"]</Button>
+            <Button Color="ButtonColor.Primary" Type="ButtonType.Submit">@Localizer["submit"]</Button>
             <Button Class="mt-2" Color="ButtonColor.Secondary" Type="ButtonType.Link" To="@Routes.SecurityIndex()">@Localizer["abort"]</Button>
         </div>
     </EditForm>
