--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ResetPassword.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ResetPassword.razor
@@ -1,4 +1,6 @@
-﻿<SchulCloudPageTitle Title="@Localizer["title"]"/>
+﻿@using Blazored.FluentValidation
+
+<SchulCloudPageTitle Title="@Localizer["title"]"/>
 
 <div class="container py-5 my-5">
     <div class="row">
@@ -8,11 +10,11 @@
             {
                 <p>@Localizer["userFormText"]</p>
 
-                <EditForm Model="_model">
+                <EditForm Model="_userModel">
                     <BsFieldCssProvider ShowValidState="false" />
 
-                    <EditFormValidator For="() => _model.User" ValidateAsync="ValidateUserAsync" />
-                    <FloatingTextInput @bind-Value="_model.User" FloatingLabel="@Localizer["userFormUserPlaceholder"]" Placeholder="exampleUser" autocomplete="username" required />
+                    <EditFormValidator For="() => _userModel.User" ValidateAsync="ValidateUserAsync" />
+                    <FloatingTextInput @bind-Value="_userModel.User" FloatingLabel="@Localizer["userFormUserPlaceholder"]" Placeholder="exampleUser" autocomplete="username" required />
 
                     <Button Class="w-100 mt-2" Color="ButtonColor.Primary" Type="ButtonType.Submit">@Localizer["userFormSubmit"]</Button>
                 </EditForm>
@@ -28,12 +30,13 @@
             {
                 <EditForm Model="_model" OnValidSubmit="ResetPasswordAsync">
                     <BsFieldCssProvider />
+                    <FluentValidationValidator />
 
-                    <EditFormValidator For="() => _model.NewPassword" ValidateAsync="ValidateNewPasswordAsync" />
-                    <FloatingPasswordInput Class="mb-3" @bind-Value="_model.NewPassword" FloatingLabel="@Localizer["resetFormNewPasswordPlaceholder"]" Placeholder="newPassword" autocomplete="new-password" required />
+                    <FloatingPasswordInput Class="mb-3" @bind-Value="_model.NewPassword" FloatingLabel="@Localizer["resetFormNewPasswordPlaceholder"]"
+                                           Placeholder="newPassword" autocomplete="new-password" required />
 
-                    <EditFormValidator For="() => _model.ConfirmedPassword" ValidateAsync="ValidateConfirmedPasswordAsync" />
-                    <FloatingPasswordInput @bind-Value="_model.ConfirmedPassword" FloatingLabel="@Localizer["resetFormConfirmedPasswordPlaceholder"]" Placeholder="newPassword" autocomplete="off" required />
+                    <FloatingPasswordInput @bind-Value="_model.ConfirmedPassword" FloatingLabel="@Localizer["resetFormConfirmedPasswordPlaceholder"]"
+                                           Placeholder="newPassword" autocomplete="off" required />
 
                     <Button Class="w-100 mt-2" Color="ButtonColor.Primary" Type="ButtonType.Submit">@Localizer["resetFormSubmit"]</Button>
                 </EditForm>
