--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
@@ -2,25 +2,31 @@
 
 <SchulCloudPageTitle Title="@Localizer["title"]" />
 
-<div class="mx-4 mt-4">
-    <EditForm Model="_model" OnValidSubmit="OnValidSubmitAsync">
-        <BsFieldCssProvider />
+<div class="container py-5 my-5">
+    <div class="row">
+        <div class="col" />
+        <div class="col-6">
+            <EditForm Model="_model" OnValidSubmit="OnValidSubmitAsync">
+                <BsFieldCssProvider />
 
-        <FluentValidationValidator />
-        <EditFormValidator For="() => _model.CurrentPassword" ValidateAsync="ValidateCurrentPasswordAsync" />
+                <FluentValidationValidator />
+                <EditFormValidator For="() => _model.CurrentPassword" ValidateAsync="ValidateCurrentPasswordAsync" />
 
-        <FloatingPasswordInput Class="mb-3" @bind-Value="_model.CurrentPassword" FloatingLabel="@Localizer["currentPassword_Placeholder"]"
-                               Placeholder="password" autocomplete="current-password" required />
+                <FloatingPasswordInput Class="mb-3" @bind-Value="_model.CurrentPassword" FloatingLabel="@Localizer["currentPassword_Placeholder"]"
+                                       Placeholder="password" autocomplete="current-password" required />
 
-        <FloatingPasswordInput Class="mb-3" @bind-Value="_model.NewPassword" FloatingLabel="@Localizer["newPassword_Placeholder"]"
-                               Placeholder="newPassword" autocomplete="new-password" required />
+                <FloatingPasswordInput Class="mb-3" @bind-Value="_model.NewPassword" FloatingLabel="@Localizer["newPassword_Placeholder"]"
+                                       Placeholder="newPassword" autocomplete="new-password" required />
 
-        <FloatingPasswordInput @bind-Value="_model.ConfirmedPassword" FloatingLabel="@Localizer["confirmedPassword_Placeholder"]"
-                               Placeholder="newPassword" autocomplete="new-password" required />
+                <FloatingPasswordInput @bind-Value="_model.ConfirmedPassword" FloatingLabel="@Localizer["confirmedPassword_Placeholder"]"
+                                       Placeholder="newPassword" autocomplete="new-password" required />
 
-        <div class="d-flex flex-column mt-3">
-            <Button Color="ButtonColor.Primary" Type="ButtonType.Submit">@Localizer["submit"]</Button>
-            <Button Class="mt-2" Color="ButtonColor.Secondary" Type="ButtonType.Link" To="@Routes.SecurityIndex()">@Localizer["abort"]</Button>
+                <div class="d-flex flex-column mt-3">
+                    <Button Color="ButtonColor.Primary" Type="ButtonType.Submit">@Localizer["submit"]</Button>
+                    <Button Class="mt-2" Color="ButtonColor.Secondary" Type="ButtonType.Link" To="@Routes.SecurityIndex()">@Localizer["abort"]</Button>
+                </div>
+            </EditForm>
         </div>
-    </EditForm>
+        <div class="col" />
+    </div>
 </div>
