--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/SignIn.razor.css
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/SignIn.razor.css
@@ -12,6 +12,10 @@
     border-top-right-radius: 0px !important;
 }
 
+::deep form.form-invalid div input:focus {
+    box-shadow: 0 0 0 .25rem rgba(var(--bs-danger-rgb),.25) !important;
+}
+
 ::deep form.form-invalid div.usr-group input {
     border-top-color: var(--bs-form-invalid-border-color) !important;
     border-left-color: var(--bs-form-invalid-border-color) !important;
