--- a/SchulCloud.Web/SchulCloud.Web/wwwroot/css/SchulCloud.Web.bundle.scp.css
+++ b/SchulCloud.Web/SchulCloud.Web/wwwroot/css/SchulCloud.Web.bundle.scp.css
@@ -13,6 +13,10 @@
     border-top-right-radius: 0px !important;
 }
 
+[b-irdx1pnwn3] form.form-invalid div input:focus {
+    box-shadow: 0 0 0 .25rem rgba(var(--bs-danger-rgb),.25) !important;
+}
+
 [b-irdx1pnwn3] form.form-invalid div.usr-group input {
     border-top-color: var(--bs-form-invalid-border-color) !important;
     border-left-color: var(--bs-form-invalid-border-color) !important;
