--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
@@ -9,39 +9,40 @@
 
     <div class="mt-4 mx-3 d-flex flex-column justify-content-center">
         <Tabs Class="justify-content-center" EnableFadeEffect>
-            <Tab Title="@Localizer["tabMethods"]">
+            <Tab Title="@Localizer["tabSignIn"]">
                 <Content>
-                    <Accordion Class="mt-2" AlwaysOpen>
+
+                    <h5 class="mt-4">@Localizer["signInMethods"]</h5>
+                    <Accordion>
                         <AccordionItem>
                             <TitleTemplate>
                                 <div class="d-flex justify-content-between align-items-center flex-fill">
                                     <div class="d-flex align-items-center">
                                         <FontsIcon Name="password" />
-                                        <span class="ms-3">@Localizer["methodPassword"]</span>
+                                        <span class="ms-3">@Localizer["signIn_Password"]</span>
                                     </div>
 
                                     @{
                                         DateTimeOffset lastSignIn = DateTimeOffset.Now.AddHours(-1);     @* This value is only a placeholder for the further implementation. *@
                                     }
-                                    <span class="mx-2">@Localizer["method_LastSignIn", lastSignIn.Humanize()]</span>
+                                    <span class="mx-2">@Localizer["signIn_Last", lastSignIn.Humanize()]</span>
                                 </div>
                             </TitleTemplate>
                             <Content>
                                 @{
-                                    PasswordOptions options = PasswordOptionsAccessor.Value;
-
                                     string? ShowWhenTrue(bool condition, Func<IdentityError> errorProvider)
                                     {
                                         if (condition)
                                         {
                                             @errorProvider().Description
                                         }
-
                                         return null;
                                     }
+
+                                    PasswordOptions options = PasswordOptionsAccessor.Value;
                                 }
 
-                                <p>@Localizer["methodPassword_Desc"]</p>
+                                <p>@Localizer["password_Desc"]</p>
                                 <p class="lh-base">
                                     @ErrorDescriber.PasswordTooShort(options.RequiredLength).Description<br />
                                     @ErrorDescriber.PasswordRequiresUniqueChars(options.RequiredUniqueChars).Description<br />
@@ -51,17 +52,49 @@
                                     @ShowWhenTrue(options.RequireDigit, ErrorDescriber.PasswordRequiresDigit)
                                 </p>
 
-                                <Button Color="ButtonColor.Primary" Type="ButtonType.Link" To="@Routes.ChangePassword()">@Localizer["methodPassword_Change"]</Button>
-                                <Button Class="ms-2" Color="ButtonColor.Danger" Type="ButtonType.Link" To="@Routes.ResetPassword(returnUrl: NavigationManager.GetRelativeUri())">@Localizer["methodPassword_Reset"]</Button>
+                                <Button Color="ButtonColor.Primary" Type="ButtonType.Link" To="@Routes.ChangePassword()">@Localizer["password_Change"]</Button>
+                                <Button Class="ms-2" Color="ButtonColor.Danger" Type="ButtonType.Link" To="@Routes.ResetPassword(returnUrl: NavigationManager.GetRelativeUri())">@Localizer["password_Reset"]</Button>
                             </Content>
                         </AccordionItem>
                     </Accordion>
-                </Content>
-            </Tab>
 
-            <Tab Title="@Localizer["tabMfa"]">
-                <Content>
-                    Mfa
+                    <h5 class="mt-5">@Localizer["mfaMethods"]</h5>
+                    <p class="mt-2">@Localizer["mfa_Desc"]</p>
+                    <Accordion>
+                        <AccordionItem>
+                            <TitleTemplate>
+                                <div class="d-flex justify-content-between align-items-center flex-fill">
+                                    <div class="d-flex align-items-center">
+                                        <FontsIcon Name="qr_code_scanner" />
+                                        <span class="ms-3">@Localizer["mfa_Authenticator"]</span>
+                                    </div>
+
+                                    @{
+                                        DateTimeOffset lastSignIn = DateTimeOffset.Now.AddHours(-1);     @* This value is only a placeholder for the further implementation. *@
+                                    }
+                                    <span class="mx-2">@Localizer["signIn_Last", lastSignIn.Humanize()]</span>
+                                </div>
+                            </TitleTemplate>
+                            <Content>
+                                <p>@Localizer["authenticator_Desc"]</p>
+
+                                @if (!_mfaEnabled)
+                                {
+                                    <Button Color="ButtonColor.Primary" Type="ButtonType.Link" To="@Routes.ActivateAuthenticator()">@Localizer["authenticator_Activate"]</Button>
+                                }
+                                else
+                                {
+                                    <Button Color="ButtonColor.Danger" @onclick="AuthenticatorDeactivate_ClickAsync">@Localizer["authenticator_Deactivate"]</Button>
+                                    <Modal @ref="AuthenticatorDeactivateModal" Title="@Localizer["authenticator_Deactivate"]" Message="@Localizer["authenticator_DeactivateModal_Message"]">
+                                        <FooterTemplate>
+                                            <Button Color="ButtonColor.Secondary" @onclick="AuthenticatorModalAbort_ClickAsync">@Localizer["authenticator_DeactivateModal_AbortBtn"]</Button>
+                                            <Button Color="ButtonColor.Danger" @onclick="AuthenticatorModalExecute_ClickAsync">@Localizer["authenticator_DeactivateModal_ExecuteBtn"]</Button>
+                                        </FooterTemplate>
+                                    </Modal>
+                                }
+                            </Content>
+                        </AccordionItem>
+                    </Accordion>
                 </Content>
             </Tab>
         </Tabs>
