-Feature: Added 2fa verification page with authentication app code verification. -Chore: Added a InnerClass parameter to the FloatingInputBase to reduce custom .css code. -Chore: Improved the naming of a parameter of BsFieldCssProvider.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ActivateAuthenticator.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ActivateAuthenticator.razor
@@ -24,7 +24,7 @@
         <div class="col" />
         <div class="col-6">
             <EditForm Model="_model">
-                <BsFieldCssProvider ShowValidState="false" />
+                <BsFieldCssProvider DisableValidState />
 
                 <div class="@BootstrapClass.Flex @BootstrapClass.FlexColumn">
 
