--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ResetPassword.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ResetPassword.razor
@@ -11,7 +11,7 @@
                 <p>@Localizer["userFormText"]</p>
 
                 <EditForm Model="_userModel">
-                    <BsFieldCssProvider ShowValidState="false" />
+                    <BsFieldCssProvider DisableValidState />
 
                     <EditFormValidator For="() => _userModel.User" ValidateAsync="ValidateUserAsync" />
                     <FloatingTextInput @bind-Value="_userModel.User" FloatingLabel="@Localizer["userFormUserPlaceholder"]" Placeholder="exampleUser" autocomplete="username" required />
