--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/SignIn.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/SignIn.razor
@@ -15,14 +15,14 @@
     <div class="row">
         <div class="col" />
         <div class="col-6">
-            <form @formname="signIn" class="@InvalidClass" method="post" action="@Routes.SignIn(returnUrl: ReturnUrl)">
-                <input type="hidden" name="_handler" value="signIn" />     @* I have to place this hidden field by manual because in interactive SSR Blazor doesn't place it by its own. *@
+            <form @formname="@_formName" class="@IsInvalidFormClass" method="post" action="@Routes.SignIn(returnUrl: ReturnUrl)">
+                <input type="hidden" name="_handler" value="@_formName" />     @* I have to place this hidden field by manual because in interactive SSR Blazor doesn't place it by its own. *@
                 <AntiforgeryToken />
 
-                <FloatingTextInput Class="usr-group" @bind-Value="Model.User" @bind-Value:after="Input_Changed" name="@($"{nameof(Model)}.{nameof(Model.User)}")"
+                <FloatingTextInput Class="usr-group" InnerClass="@IsInvalidInputClass" @bind-Value="Model.User" @bind-Value:after="Input_Changed" name="@($"{nameof(Model)}.{nameof(Model.User)}")"
                                    FloatingLabel="@Localizer["formUserPlaceholder"]" Placeholder="exampleUser" autocomplete="username" required />
 
-                <FloatingPasswordInput Class="pwd-group" @bind-Value="Model.Password" @bind-Value:after="Input_Changed" name="@($"{nameof(Model)}.{nameof(Model.Password)}")"
+                <FloatingPasswordInput Class="pwd-group" InnerClass="@IsInvalidInputClass" @bind-Value="Model.Password" @bind-Value:after="Input_Changed" name="@($"{nameof(Model)}.{nameof(Model.Password)}")"
                                        FloatingLabel="@Localizer["formPasswordPlaceholder"]" Placeholder="password" autocomplete="current-password" required />
 
                 @if (IsInvalid())
@@ -30,7 +30,7 @@
                     <div class="@ExtendedBootstrapClass.InvalidFeedback d-block">@_errorMessage</div>
                 }
 
-                <CheckBoxInput Class="my-3" @bind-Value="Model.RememberMe" name="@($"{nameof(Model)}.{nameof(Model.RememberMe)}")" Label="@Localizer["formPersistent"]" />
+                <CheckBoxInput Class="my-3" @bind-Value="Model.Persistent" name="@($"{nameof(Model)}.{nameof(Model.Persistent)}")" Label="@Localizer["formPersistent"]" />
 
                 <div class="@BootstrapClass.Flex @BootstrapClass.FlexColumn">
                     <Button Class="mb-2" Color="ButtonColor.Success" Type="ButtonType.Submit">@Localizer["formSubmit"]</Button>
