--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/SignIn.razor.css
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/SignIn.razor.css
@@ -1,37 +1,27 @@
 ﻿::deep div.usr-group input {
     border-bottom-left-radius: 0px !important;
     border-bottom-right-radius: 0px !important;
+    border-bottom-color: var(--bs-border-color) !important;
+    background-image: none !important;
 }
 
 ::deep div.pwd-group input {
     border-top-left-radius: 0px !important;
     border-top-right-radius: 0px !important;
+    border-top-color: var(--bs-border-color) !important;
+    border-right-color: var(--bs-border-color) !important;
+    background-image: none !important;
+}
+
+::deep div.pwd-group {
+    margin-top: -1px;
 }
 
 ::deep .pwd-group span {
     border-top-right-radius: 0px !important;
 }
 
-::deep form.form-invalid div input:focus {
-    box-shadow: 0 0 0 .25rem rgba(var(--bs-danger-rgb),.25) !important;
-}
-
-::deep form.form-invalid div.usr-group input {
-    border-top-color: var(--bs-form-invalid-border-color) !important;
-    border-left-color: var(--bs-form-invalid-border-color) !important;
-    border-right-color: var(--bs-form-invalid-border-color) !important;
-}
-
-::deep form.form-invalid div.pwd-group input {
-    border-left-color: var(--bs-form-invalid-border-color) !important;
-    border-bottom-color: var(--bs-form-invalid-border-color) !important;
-}
-
-::deep form.form-invalid div.pwd-group span {
+::deep form.form-invalid .pwd-group span {
     border-right-color: var(--bs-form-invalid-border-color) !important;
     border-bottom-color: var(--bs-form-invalid-border-color) !important;
-}
-
-::deep div.pwd-group {
-    margin-top: -1px;
 }
