-Refactor: Rename files that use type parameter naming to normal pascalcase. -Refactor: Move components into namespaces that match their use case.

--- a/SchulCloud.Web/SchulCloud.Web/Components/App.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/App.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Sections
+@using SchulCloud.Web.Components.Routing
 
 <!DOCTYPE html>
 <html lang="@Thread.CurrentThread.CurrentUICulture" class="h-100">
