--- a/SchulCloud.Web/SchulCloud.Web/Components/_Imports.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/_Imports.razor
@@ -6,10 +6,12 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using SchulCloud.Web;
+@using SchulCloud.Web
 @using Routes = SchulCloud.Web.Routes
 @using SchulCloud.Web.Client
 @using SchulCloud.Web.Components
+@using SchulCloud.Web.Components.Google
 @using SchulCloud.Web.Components.Bootstrap.Forms
+@using SchulCloud.Web.Components.Forms.Validation
 @using SchulCloud.Web.Components.Bootstrap.Validation
 @using BlazorBootstrap
