-Feature: Added a page for 2fa recovery code generation. -Security: Added custom UserManager to provide hashing functionality to 2fa recovery codes. -Feature: Added IJSRuntime extensions and client-side code to download files to the client.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ActivateAuthenticator.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ActivateAuthenticator.razor
@@ -3,7 +3,7 @@
 <SchulCloudPageTitle Title="@Localizer["title"]" />
 
 <div class="container mt-4">
-    <h3 class="row justify-content-center text-center">@Localizer["activateHeadline"]</h3>
+    <h3 class="row justify-content-center text-center">@Localizer["title"]</h3>
     <div class="row mt-4">
         <div class="col d-flex flex-column align-items-center justify-content-center">
             @if (_authenticatorInfo is not null)
