-Feature: Added 2fa email confirmation in security settings page and verify 2fa page. -Feature: Added an identity token provider that provides time limited codes. -Improvement: Improved class names, routes and localizer keys of some pages. -Fix: Fixed serialization issue with TwoFactorEnabledFlag in User model.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/TwoFactor/Authenticator.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/TwoFactor/Authenticator.razor
@@ -14,9 +14,9 @@
         </div>
         <div class="col d-flex align-items-center">
             <ol class="list-group list-group-flush list-group-numbered">
-                <li class="list-group-item">@Localizer["activationGuide_0"]</li>
-                <li class="list-group-item">@Localizer["activationGuide_1"]</li>
-                <li class="list-group-item">@Localizer["activationGuide_2", 6]</li>     @* Retrieve it in future from options. *@
+                <li class="list-group-item">@Localizer["enableGuide_0"]</li>
+                <li class="list-group-item">@Localizer["enableGuide_1"]</li>
+                <li class="list-group-item">@Localizer["enableGuide_2", 6]</li>     @* Retrieve it in future from options. *@
             </ol>
         </div>
     </div>
