--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
@@ -80,17 +80,11 @@
 
                                 @if (!_mfaEnabled)
                                 {
-                                    <Button Color="ButtonColor.Primary" Type="ButtonType.Link" To="@Routes.ActivateAuthenticator()">@Localizer["authenticator_Activate"]</Button>
+                                    <Button Color="ButtonColor.Primary" Type="ButtonType.Link" To="@Routes.Authenticator()">@Localizer["authenticator_Enable"]</Button>
                                 }
                                 else
                                 {
-                                    <Button Color="ButtonColor.Danger" @onclick="@(async () => await AuthenticatorDeactivateModal!.ShowAsync())">@Localizer["authenticator_Deactivate"]</Button>
-                                    <Modal @ref="AuthenticatorDeactivateModal" Title="@Localizer["authenticator_Deactivate"]" Message="@Localizer["authenticator_DeactivateModal_Message"]">
-                                        <FooterTemplate>
-                                            <Button Color="ButtonColor.Secondary" @onclick="@(async () => await AuthenticatorDeactivateModal!.HideAsync())">@Localizer["authenticator_DeactivateModal_AbortBtn"]</Button>
-                                            <Button Color="ButtonColor.Danger" @onclick="AuthenticatorDeactivate_ClickAsync">@Localizer["authenticator_DeactivateModal_ExecuteBtn"]</Button>
-                                        </FooterTemplate>
-                                    </Modal>
+                                    <Button Color="ButtonColor.Danger" @onclick="AuthenticatorDisable_ClickAsync">@Localizer["authenticator_Disable"]</Button>
                                 }
                             </Content>
                         </AccordionItem>
@@ -111,17 +105,44 @@
                             <Content>
                                 <p>@Localizer["recovery_Desc"]</p>
 
-                                @if (_remainingRecoveryCodes > 0)
+                                @if (_mfaRemainingRecoveryCodes > 0)
                                 {
-                                    <p>@Localizer["recovery_ValidCodes", _remainingRecoveryCodes]</p>
+                                    <p>@Localizer["recovery_ValidCodes", _mfaRemainingRecoveryCodes]</p>
                                 }
 
                                 @{
-                                    string btnLabelKey = _remainingRecoveryCodes == 0
+                                    string btnLabelKey = _mfaRemainingRecoveryCodes == 0
                                         ? "recovery_GenerateNew"
                                         : "recovery_Renew";
                                 }
-                                <Button Color="ButtonColor.Primary" Type="ButtonType.Link" To="@Routes.GenerateRecoveryCodes()">@Localizer[btnLabelKey]</Button>
+                                <Button Color="ButtonColor.Primary" Type="ButtonType.Link" To="@Routes.RecoveryCodes()">@Localizer[btnLabelKey]</Button>
+                            </Content>
+                        </AccordionItem>
+                        <AccordionItem>
+                            <TitleTemplate>
+                                <div class="d-flex justify-content-between align-items-center flex-fill">
+                                    <div class="d-flex align-items-center">
+                                        <FontsIcon Name="mail" />
+                                        <span class="ms-3">@Localizer["mfa_Email"]</span>
+                                    </div>
+
+                                    @{
+                                        DateTimeOffset lastSignIn = DateTimeOffset.Now.AddHours(-1);     @* This value is only a placeholder for the further implementation. *@
+                                    }
+                                    <span class="mx-2">@Localizer["signIn_Last", lastSignIn.Humanize()]</span>
+                                </div>
+                            </TitleTemplate>
+                            <Content>
+                                <p>@Localizer["email_Desc"]</p>
+
+                                @if (!_mfaEmailEnabled)
+                                {
+                                    <Button Color="ButtonColor.Primary" @onclick="EmailEnable_ClickAsync">@Localizer["email_Enable"]</Button>
+                                }
+                                else
+                                {
+                                    <Button Color="ButtonColor.Danger" @onclick="EmailDisable_ClickAsync">@Localizer["email_Disable"]</Button>
+                                }
                             </Content>
                         </AccordionItem>
                     </Accordion>
