-Fix: Fixed the confirmation modal when disabling 2fa. -Improvement: Used UserManager.Get{Property}Async as a instead of the user's property. -Config: Updated configuration to disable useless logs. -Config: Disabled opening browser on start. -Refactor: Renamed some localization keys. -Refactor: Run code clean-up

--- a/SchulCloud.Web/SchulCloud.Web/Components/Layouts/MainLayout.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Layouts/MainLayout.razor
@@ -19,7 +19,7 @@
             <Dropdown>
                 <DropdownToggleButton Class="d-flex align-items-center">
                     <FontsIcon Name="account_circle" />     @* This will be later replaced with the real user image. *@
-                    <strong class="ms-2">@UserManager.GetUserName(_user)</strong>
+                    <strong class="ms-2">@UserManager.GetUserName(_userPrincipial)</strong>
                 </DropdownToggleButton>
 
                 <DropdownMenu>
