--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
@@ -86,6 +86,13 @@
                                 {
                                     <Button Color="ButtonColor.Danger" @onclick="AuthenticatorDisable_ClickAsync">@Localizer["authenticator_Disable"]</Button>
                                 }
+
+                                <Modal @ref="AuthenticatorDisableModal" Title="@Localizer["authenticator_Disable"]" Message="@Localizer["authenticator_DisableMessage"]">
+                                    <FooterTemplate>
+                                        <Button Color="ButtonColor.Secondary" @onclick="AuthenticatorDisableAbort_ClickAsync">@Localizer["authenticator_DisableAbortBtn"]</Button>
+                                        <Button Class="ms-2" Color="ButtonColor.Danger" @onclick="AuthenticatorDisableExecute_ClickAsync">@Localizer["authenticator_DisableExecuteBtn"]</Button>
+                                    </FooterTemplate>
+                                </Modal>
                             </Content>
                         </AccordionItem>
                         <AccordionItem>
